[package]
authors = ["Michael Neumann <mneumann@ntecs.de>, terkwood <38859656+Terkwood@users.noreply.github.com>"]
description = "Turtle Graphics for Rust"
edition = "2018"
keywords = ["graphics"]
license = "MIT"
name = "turtle-graphics"
repository = "https://github.com/mneumann/turtle-graphics-rs"
version = "0.2.0"
